--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     </div>
 </body>
+<script src="static/vconsole.min.js"></script>
 <script>
     let body = document.getElementById("poi")
     let preX = preY = 0
